--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -10,6 +10,10 @@
       gtag('config', 'G-9N2YD8CLJS');
     </script>
     <%= favicon_link_tag 'logo.png' %>
+    <% if @post.present? %>
+      <%= render 'layouts/partials/social_post_tags', post: @post %>
+    <% end %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4566416931763342"
      crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -42,6 +46,10 @@
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KP5R9TJC"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <section
       class="onboarding"
       data-start-event="click"
