--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -112,7 +112,7 @@
                 </div>
               <% end %>
               <div class="social-container">
-                <p><b>Connect with what you just read? Share it in any the of ways below! 🤳💬</b></p>
+                <p><b>Think this article is a must-read? Share it! 🤳💬</b></p>
                 <%= render 'sharing/share_inline', post: @post %>
               </div>
               <div id= "background">
