--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -144,5 +144,30 @@
         </div>
       </section>
       <%= javascript_include_tag 'layout'%>
+      <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+      <script>
+        window.googletag = window.googletag || {cmd: []};
+        googletag.cmd.push(function() {
+          googletag.defineSlot(
+            '/18190176,22670735396/MCM_Validation',
+            [1, 1],
+            'div-gpt-ad-1614955491295-0'
+          ).addService(googletag.pubads());
+          googletag.pubads().enableSingleRequest();
+          googletag.enableServices();
+        });
+      </script>
+      <div id="div-gpt-ad-1614955491295-0">
+        <script>
+          googletag.cmd.push(function() {
+            if (googletag.pubads().isInitialLoadDisabled()) {
+              googletag.display('div-gpt-ad-1614955491295-0');
+              googletag.refresh('div-gpt-ad-1614955491295-0');
+            } else {
+              googletag.display('div-gpt-ad-1614955491295-0');
+            }
+          });
+        </script>
+      </div>
     </body>
   </html>
