updated privacy policy

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -23,10 +23,6 @@
   <p>Writers have full control over what information they want to be publically available (such as their bio or profile photo) and we never share our writers' or readers' personal information with any other party.</p>
   <p>Anyone on the site can request to have their account and all their articles/data deleted by contacting us at editors@theteenmagazine.com.</p>
 
-  <p><strong>How Do We Use Your Information?</strong></p>
-
-  <p>We employ the information we collect from you in various ways, including when you register, make a purchase, sign up for our newsletter, participate in surveys, or engage with our website features. Here are some of the specific ways we use your data:</p>
-
   <p><strong>Google Analytics:</strong> We employ Google Analytics, a web analytics service by Google, Inc., to analyze traffic and user behavior on our website. Google Analytics uses cookies and similar technologies to provide insights into visitors&#39; interactions with our site. The data collected includes, but is not limited to:</p>
 
   <ul>
@@ -42,32 +38,10 @@
 
   <p>Your usage of our website implies consent to Google&#39;s data processing methods as described. Further details about Google Analytics and data handling can be found in Google&#39;s Privacy Policy. To opt out of Google Analytics data collection and analysis, you can install the Google Analytics Opt-out Browser Add-on provided by Google.</p>
 
-  <p><strong>Email Communication</strong>: We send periodic emails regarding articles published on The Teen Magazine or other relevant updates.</p>
+  <p><strong>Advertising.</strong> 
 
-  <p><strong>How We Protect Your Information</strong></p>
-
-  <p>We prioritize the security of your information by implementing the following measures:</p>
-
-  <ul>
-    <li>We do not use vulnerability scanning or scanning to PCI standards.</li>
-    <li>We do not request credit card numbers, ensuring your financial data remains secure.</li>
-    <li>Malware scanning is not used.</li>
-  </ul>
-
-  <p><strong>Use of Cookies</strong></p>
-
-  <p>Cookies, small files transferred to your computer through your web browser, are used on our site with your consent. Cookies enhance your experience by remembering items in your shopping cart and understanding your preferences based on site interactions. Additionally, cookies help us compile aggregate data about site traffic and interaction to enhance future site experiences and tools. These are some specific uses of cookies:</p>
-
-  <ul>
-    <li>Compiling aggregate data about site traffic and interactions.</li>
-    <li>Utilizing trusted third-party services for tracking such information on our behalf.</li>
-    <li>You can manage cookie settings by configuring your browser to notify you of incoming cookies or to disable them. Please be aware that turning off cookies may impact the efficiency of certain site features.</li>
-    <li>Third-Party Disclosures</li>
-    <li>We do not trade, sell, or transfer your Personally Identifiable Information to external parties, except under the following conditions:</li>
-    <li>Trusted third-party service providers who support our website operation and user service, provided they maintain confidentiality.</li>
-    <li>Compliance with the law, site policies, or safeguarding rights, property, or safety, as deemed appropriate.</li>
-    <li>Non-personally identifiable visitor information may be shared with other parties for marketing, advertising, or similar purposes.</li>
-  </ul>
+  <p>This Site is affiliated with CMI Marketing, Inc., d/b/a Raptive (“Raptive”) for the purposes of placing advertising on the Site, and Raptive will collect and use certain data for advertising purposes. 
+  To learn more about Raptive’s data usage, click here: <a href="https://raptive.com/creator-advertising-privacy-statement">https://raptive.com/creator-advertising-privacy-statement</a></p>
 
   <p><strong>Third-Party Links</strong></p>
 
@@ -106,5 +80,5 @@
   <p>For any questions or concerns regarding this privacy policy, please contact us through our contact page <a href="https://www.theteenmagazine.com/contact-us">here</a>.</p>
 
   <p>This privacy policy is designed to ensure the protection of your Personally Identifiable Information while providing transparency about our data practices. Your trust and privacy are of utmost importance to us.</p>
-  <p>Last Edited on 2023-08-19</p>
+  <p>Last Edited on December 31, 2023</p>
 </div>
