updated privacy policy

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,6 +1,6 @@
 <div class="privacy" style="width: 80%; max-width: 1000px; margin: 0 auto;">
-  <h1 id="page_title">The Teen Magazine Privacy Policy - Protecting Your Personally Identifiable Information</h1>
-  <p>At The Teen Magazine, we are deeply committed to safeguarding your Personally Identifiable Information in accordance with US privacy laws and information security standards. PII refers to information that can identify, contact, or locate an individual, either alone or in conjunction with other data. To provide you with clarity regarding the handling of your personal information, please carefully review our privacy policy, which explains how we collect, utilize, and protect your information within the scope of our website.</p>
+  <h1 id="page_title">The Teen Magazine Privacy Policy</h1>
+  <p>At The Teen Magazine, we are deeply committed to safeguarding your personally identifiable Information in accordance with US privacy laws and information security standards. To provide you with clarity regarding the handling of your personal information, please carefully review our privacy policy, which explains how we collect, utilize, and protect your information within the scope of our website.</p>
 
   <p><strong>What Personal Information Do We Collect?</strong></p>
 
