updated privacy policy

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -23,20 +23,10 @@
   <p>Writers have full control over what information they want to be publically available (such as their bio or profile photo) and we never share our writers' or readers' personal information with any other party.</p>
   <p>Anyone on the site can request to have their account and all their articles/data deleted by contacting us at editors@theteenmagazine.com.</p>
 
-  <p><strong>Google Analytics:</strong> We employ Google Analytics, a web analytics service by Google, Inc., to analyze traffic and user behavior on our website. Google Analytics uses cookies and similar technologies to provide insights into visitors&#39; interactions with our site. The data collected includes, but is not limited to:</p>
-
-  <ul>
-    <li>IP Address: Used for approximate geographical location estimation, with no personally identifiable information access.</li>
-    <li>Browser and Device Information: Helps ensure compatibility with various platforms.</li>
-    <li>Pages Visited: Informs us about popular content and user navigation patterns.</li>
-    <li>Referral Sources: Tracks how users arrive at our website to optimize marketing efforts.</li>
-    <li>User Behavior: Provides data on interactions, such as clicks on links and buttons.</li>
-    <li>Demographics and Interests: Aggregated data based on browsing behavior.</li>
-  </ul>
-
-  <p>This information exclusively aids in enhancing our website&#39;s performance, content, and user experience, guiding our design, content strategy, and marketing efforts. Importantly, we do not have access to personally identifiable information unless voluntarily provided by users through forms or other website interactions.</p>
-
-  <p>Your usage of our website implies consent to Google&#39;s data processing methods as described. Further details about Google Analytics and data handling can be found in Google&#39;s Privacy Policy. To opt out of Google Analytics data collection and analysis, you can install the Google Analytics Opt-out Browser Add-on provided by Google.</p>
+  <p><strong>Google Analytics.</strong>
+  
+  <p>We use Google Analytics to analyze the use of our website. Google Analytics gathers information about website use by means of cookies. The information gathered relating to our website is used to create reports about the use of our website. 
+  Google's privacy policy is available at: <a target="_blank" href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 
   <p><strong>Advertising.</strong> 
 
